Formatting of css in the index.html file.

--- a/src/main/resources/panl-results-viewer/index.html
+++ b/src/main/resources/panl-results-viewer/index.html
@@ -11,62 +11,32 @@
 <style>
 	body { min-height: 100%; }
 	html, body { margin: 0; padding: 0; font-family: "Libre Baskerville", serif; font-weight: 400; font-style: normal; }
+	h1, h2, form, p { padding: 0 10px;}
+	h2 { font-size: 14px; font-style: italic; font-weight: 400; }
+
 	p { line-height: 1.8; text-align:justify; text-justify:auto; }
 	p.info { line-height: 1.4; font-size: 12px; font-style: italic; }
 	p.tight { margin-bottom: 2px; padding-bottom: 2px; }
+
 	ul { padding-left: 10px; }
 	ul li { line-height: 1.6; }
-	h1, h2, form, p { padding: 0 10px;}
-	h2 { font-size: 14px; font-style: italic; font-weight: 400; }
+
 	div#header { position: relative; text-align: center; border-bottom: 1px solid #afafaf; }
 	div#header p { text-align: center; }
+	div#header h1 { padding-top: 14px; margin: 0; }
+
 	#documents p:nth-child(odd) { background-color: #efefef; padding: 14px 10px; }
 	#documents p { text-justify: none }
 
-		div#header h1 {
-			padding-top: 14px;
-				margin: 0;
-		}
+	div#navigation { margin-bottom: 104px; float: left; width: 300px; }
+	div#navigation li { list-style: none; }
 
-		div#navigation {
-		margin-bottom: 104px;
-		}
+	div#container { width: 1024px; margin: 0 auto; }
 
-		div#navigation li {
-				list-style: none;
-		}
+	div#content { float: right; width: 700px; }
 
-		div#container {
-				width: 1024px;
-				margin: 0 auto;
-		}
-
-		div#content {
-				float: right;
-				width: 700px;
-		}
-
-		div#navigation {
-				float: left;
-				width: 300px;
-		}
-
-	div#footer {
-		border-top: 1px solid #afafaf;
-		margin: 84px auto 0 auto;
-		padding: 6px 0;
-		background-color: #efefef;
-		clear: both;
-    position: relative;
-    height: 80px;
-    margin-top: -80px;
-    		width: 1024px;
-	}
-
-	div#footer p {
-            text-align: center;
-            text-justify: none
-}
+	div#footer { border-top: 1px solid #afafaf; margin: 84px auto 0 auto; padding: 6px 0; background-color: #efefef; clear: both; position: relative; height: 80px; margin-top: -80px; width: 1024px; }
+	div#footer p { text-align: center; text-justify: none }
 	</style>
 </head>
 <body>
