--- a/src/main/resources/panl-results-viewer/index.html
+++ b/src/main/resources/panl-results-viewer/index.html
@@ -14,6 +14,8 @@
 	h1, h2, form, p { padding: 0 10px;}
 	h2 { font-size: 14px; font-style: italic; font-weight: 400; }
 
+	a:link, a:visited, a:hover, a:active { color: blue; }
+
 	p { line-height: 1.8; text-align:justify; text-justify:auto; }
 	p.info { line-height: 1.4; font-size: 12px; font-style: italic; }
 	p.tight { margin-bottom: 2px; padding-bottom: 2px; }
