--- a/src/main/resources/panl-results-viewer/index.html
+++ b/src/main/resources/panl-results-viewer/index.html
@@ -49,14 +49,19 @@
 
 		<hr />
 
-		<p>Available collections/fieldsets: <span id="available_collections"></span></p>
+		<p>Available collections/fieldsets (CaFS) URI: <span id="available_collections"></span></p>
 
-		<p><strong>You are viewing collection/fieldset: <span id="collection"></span></strong></p>
+		<p><strong>You are viewing collection/fieldset (CaFS) URI: <span id="collection"></span></strong></p>
 	</div>
 	<div id="wrapper">
 		<div id="content">
 			<p><strong>Search Results</strong> <span id="num_results"></span></p>
-			<p><strong>Showing </strong> <span id="num_shown"></span></p>
+			<p>
+				<strong>Page </strong> <span id="page_num"></span> of <span id="num_pages"></span>
+				<strong>Showing </strong> <span id="num_per_page"></span> results per page
+				<strong>This page has </strong> <span id="num_shown"></span> result(s)</p>
+			<p><span id="previous"></span> <span id="next"></span><p>
+			<p><strong>Show </strong> <span id="num_per_page_links"></span> per page</p>
 
 			<p class="info" id="timings"></p>
 			<div id="documents"></div>
