changed available to be an array, not an object, cleaned up the schema

--- a/src/main/resources/panl-results-viewer/index.html
+++ b/src/main/resources/panl-results-viewer/index.html
@@ -59,9 +59,9 @@
 			<p>
 				<strong>Page </strong> <span id="page_num"></span> of <span id="num_pages"></span>
 				<strong>Showing </strong> <span id="num_per_page"></span> results per page
-				<strong>This page has </strong> <span id="num_shown"></span> result(s)</p>
-			<p><span id="previous"></span> <span id="next"></span><p>
-			<p><strong>Show </strong> <span id="num_per_page_links"></span> per page</p>
+				<strong>This page has </strong> <span id="num_shown"></span> result(s)
+			</p>
+			<p><span id="previous"></span> <span id="next"></span> || <strong>Show </strong> <span id="num_per_page_links"></span> per page</p>
 
 			<p class="info" id="timings"></p>
 			<div id="documents"></div>
