Added in canonical URI into the panl results viewer

--- a/src/main/resources/panl-results-viewer/index.html
+++ b/src/main/resources/panl-results-viewer/index.html
@@ -52,6 +52,9 @@
 		<p>Available collections/fieldsets (CaFS) URI: <span id="available_collections"></span></p>
 
 		<p><strong>You are viewing collection/fieldset (CaFS) URI: <span id="collection"></span></strong></p>
+
+		<p><strong>Canonical URI: <span id="canonical_uri"></span></strong></p>
+
 	</div>
 	<div id="wrapper">
 		<div id="content">
