Start of sorting options display

--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -64,7 +64,11 @@
 				<strong>Showing </strong> <span id="num_per_page"></span> results per page
 				<strong>This page has </strong> <span id="num_shown"></span> result(s)
 			</p>
-			<p><span id="previous"></span> <span id="next"></span> || <strong>Show </strong> <span id="num_per_page_links"></span> per page</p>
+			<p>
+				<span id="previous"></span> <span id="next"></span> ||
+				<strong>Show </strong> <span id="num_per_page_links"></span> per page ||
+				<strong>Sort by </strong> <span id="sorting_options"></span>
+			</p>
 
 			<p class="info" id="timings"></p>
 			<div id="documents"></div>
