Updated display of document results

--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -27,7 +27,10 @@
 	div#header p { text-align: center; }
 	div#header h1 { padding-top: 14px; margin: 0; }
 
-	#documents p:nth-child(odd) { background-color: #efefef; padding: 14px 10px; }
+	#documents dl:nth-child(odd) { background-color: #efefef; }
+	dl { border-top: 1px solid black; padding: 14px 10px; margin: 0; }
+	dt { font-weight: bold; }
+	dd { padding-bottom: 3px; }
 	#documents p { text-justify: none }
 
 	div#navigation { margin-bottom: 104px; float: left; width: 300px; }
