Changed the explanation formatting and added a bit of padding to the bottom of documents

--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -28,6 +28,7 @@
 	div#header h1 { padding-top: 14px; margin: 0; }
 
 	#documents dl:nth-child(odd) { background-color: #efefef; }
+	#documents { margin-bottom: 12px; }
 	dl { border-top: 1px solid black; padding: 14px 10px; margin: 0; }
 	dt { font-weight: bold; }
 	dd { padding-bottom: 3px; }
