Additional output fields for the JSON response panl.results.fields.all -> panl.results.fields.default CaFS -> CaFUPs

--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -72,9 +72,9 @@
 
 		<hr />
 
-		<p>Available collections/fieldsets (CaFS) URI: <span id="available_collections"></span></p>
+		<p>Available collections/fieldset URI Paths (CaFUPs): <span id="available_collections"></span></p>
 
-		<p><strong>You are viewing collection/fieldset (CaFS) URI: <span id="collection"></span></strong></p>
+		<p><strong>You are viewing collection/fieldset URI Path (CaFUP): <span id="collection"></span></strong></p>
 
 		<p><strong>Canonical URI: <span id="canonical_uri"></span></strong></p>
 
