--- a/src/main/resources/panl-results/explainer/index.html
+++ b/src/main/resources/panl-results/explainer/index.html
@@ -65,9 +65,9 @@
 
 		<hr />
 
-		<p>Available collections/fieldsets (CaFS) URI: <span id="available_collections"></span></p>
+		<p>Available collections/fieldsets URI Paths (CaFUPs): <span id="available_collections"></span></p>
 
-		<p><strong>You are viewing collection/fieldset (CaFS) URI: <span id="collection"></span></strong></p>
+		<p><strong>You are viewing collection/fieldset URI Path (CaFUP): <span id="collection"></span></strong></p>
 
 		<p>Enter the Canonical URI path below:</p>
 		<form method="GET">
