Add "default" as constant, put CaFUPs on a new line in the panl-results-viewer

--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -72,7 +72,7 @@
 
 		<hr />
 
-		<p>Available collections/fieldset URI Paths (CaFUPs): <span id="available_collections"></span></p>
+		<p>Available collections/fieldset URI Paths (CaFUPs): <br /><span id="available_collections"></span></p>
 
 		<p><strong>You are viewing collection/fieldset URI Path (CaFUP): <span id="collection"></span></strong></p>
 
