--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -56,7 +56,8 @@
 		.dualrange { width: 100%; height: 32px; }
 		#ranges { padding: 0 14px; }
 		#ranges p { font-weight: bold; padding-left: 0px; }
-		.hidden { display: none }
+		.hidden { display: none; }
+		input { width: 50%; }
 		input, button { font-family: "Libre Baskerville", serif; padding: 4px; }
 
 		.navheading { background-color: #efefef; border-left: 6px solid black; }
