--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -8,65 +8,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<script src="/panl-results/static/jquery-3.7.1.min.js"></script>
 	<script src="/panl-results/static/panl-viewer.js"></script>
-	<script src="/panl-results/static/dualrange.min.js"></script>
-	<link rel="stylesheet" href="/panl-results/static/dualrange.min.css" />
-	<style>
-		body { min-height: 100%; }
-		html, body { margin: 0; padding: 0; font-family: "Libre Baskerville", serif; font-weight: 400; font-style: normal; }
-		h1, h2, form, p { padding: 0 10px;}
-		h2 { font-size: 14px; font-style: italic; font-weight: 400; }
 
-		a:link, a:visited, a:hover, a:active { color: blue; }
-
-		p { line-height: 1.8; text-align:justify; text-justify:auto; }
-		p.info { line-height: 1.4; font-size: 12px; font-style: italic; }
-		p.tight { margin-bottom: 2px; padding-bottom: 2px; }
-
-		ul { padding-left: 10px; }
-		ul li { line-height: 1.6; }
-
-		div#header { position: relative; text-align: center; border-bottom: 1px solid #afafaf; }
-		div#header p { text-align: center; }
-		div#header h1 { padding-top: 14px; margin: 0; }
-
-		#documents dl:nth-child(odd) { background-color: #efefef; }
-		#documents { margin-bottom: 12px; }
-		dl { border-top: 1px solid black; padding: 14px 10px; margin: 0; }
-		dt { font-weight: bold; }
-		dd { padding-bottom: 3px; }
-		#documents p { text-justify: none }
-
-		div#navigation { margin-bottom: 104px; float: left; width: 300px; }
-		div#navigation li { list-style: none; }
-
-		div#container { width: 1024px; margin: 0 auto; }
-
-		div#content { float: right; width: 700px; }
-
-		div.padding { padding-bottom: 14px;}
-		div.range-link { text-align: center; }
-
-		div#footer { border-top: 1px solid #afafaf; margin: 84px auto 0 auto; padding: 6px 0; background-color: #efefef; clear: both; position: relative; height: 80px; margin-top: -80px; width: 1024px; }
-		div#footer p { text-align: center; text-justify: none }
-
-		.left { float: left; }
-		.right { float: right; }
-		.clear { clear: left; }
-		#timings { padding-top: 12px; border-top: 1px solid #efefef; }
-		.dualrange { width: 100%; height: 32px; }
-		#ranges { padding: 0 14px; }
-		#ranges p { font-weight: bold; padding-left: 0px; }
-		.hidden { display: none; }
-		input { width: 50%; }
-		input, button { font-family: "Libre Baskerville", serif; padding: 4px; }
-
-		.navheading { background-color: #efefef; border-left: 6px solid black; }
-
-		.custom-range .dualrange__range { background-color: #000; }
-		.custom-range .dualrange__min, .custom-range .dualrange__max { border-color: #000; }
-		.custom-range .dualrange__min:before, .custom-range .dualrange__max:before { background-color: #000; }
-		.custom-range .dualrange__min:after, .custom-range .dualrange__max:after { border-color: #000; }
-	</style>
+	<link href="/panl-results/static/nouislider.min.css" rel="stylesheet" />
+	<script src="/panl-results/static/nouislider.min.js"></script>
+	<link href="/panl-results/static/panl.css" rel="stylesheet" />
 </head>
 <body>
 <div id="container">
