--- a/src/main/resources/panl-results/explainer/index.html
+++ b/src/main/resources/panl-results/explainer/index.html
@@ -9,53 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
 	<script src="/panl-results/static/jquery-3.7.1.min.js"></script>
 	<script src="/panl-results/static/panl-explainer.js"></script>
-	<style>
-		body { min-height: 100%; }
-		html, body { margin: 0; padding: 0; font-family: "Libre Baskerville", serif; font-weight: 400; font-style: normal; }
-		h1, h2, form, p { padding: 0 10px;}
-		h2 { font-size: 14px; font-style: italic; font-weight: 400; }
-
-		a:link, a:visited, a:hover, a:active { color: blue; }
-
-		p { line-height: 1.8; text-align:justify; text-justify:auto; }
-		p.info { line-height: 1.4; font-size: 12px; font-style: italic; }
-		p.tight { margin-bottom: 2px; padding-bottom: 2px; }
-
-		ul { padding-left: 10px; }
-		ul li { line-height: 1.6; }
-
-		div#header { position: relative; text-align: center; border-bottom: 1px solid #afafaf; }
-		div#header p { text-align: center; }
-		div#header h1 { padding-top: 14px; margin: 0; }
-
-		#documents pre:nth-child(odd) { background-color: #efefef; padding: 12px;}
-		#documents pre:nth-child(even) { padding: 0px 12px;}
-		#documents { margin-bottom: 12px; }
-
-		#documents pre.explain {
-			text-justify: none;
-			font-family: "Inconsolata", monospace;
-		  font-optical-sizing: auto;
-		  font-weight: 700;
-		  font-variation-settings: "wdth" 100;
-		}
-
-
-		div#container { width: 1024px; margin: 0 auto; }
-
-		div#content { float: right; width: 1000px; }
-
-		div.padding { padding-bottom: 14px;}
-
-		div#footer { border-top: 1px solid #afafaf; margin: 84px auto 0 auto; padding: 6px 0; background-color: #efefef; clear: both; position: relative; height: 80px; margin-top: -80px; width: 1024px; }
-		div#footer p { text-align: center; text-justify: none }
-
-		input { width: 90%; }
-		.left { float: left; }
-		.right { float: right; }
-		.clear { clear: left; }
-		#timings { padding-top: 12px; border-top: 1px solid #efefef; }
-	</style>
+	<link href="/panl-results/static/panl.css" rel="stylesheet" />
 </head>
 <body>
 <div id="container">
@@ -65,7 +19,7 @@
 
 		<hr />
 
-		<p>Available collections/fieldsets URI Paths (CaFUPs): <span id="available_collections"></span></p>
+		<p>Available collections/fieldset URI Paths (CaFUPs): <br /><span id="available_collections"></span></p>
 
 		<p><strong>You are viewing collection/fieldset URI Path (CaFUP): <span id="collection"></span></strong></p>
 
