Added in panlCollectionURI for the explainer, minor variable name changes.  UPdates to the testing webapps HTML, CSS and JS. Fixed Explainer collection lookup, added in additional details

--- a/src/main/resources/panl-results/explainer/index.html
+++ b/src/main/resources/panl-results/explainer/index.html
@@ -10,6 +10,7 @@
 	<script src="/panl-results/static/jquery-3.7.1.min.js"></script>
 	<script src="/panl-results/static/panl-explainer.js"></script>
 	<link href="/panl-results/static/panl.css" rel="stylesheet" />
+	<link href="/panl-results/static/panl-explain.css" rel="stylesheet" />
 </head>
 <body>
 <div id="container">
@@ -25,8 +26,8 @@
 
 		<p>Enter the Canonical URI path below:</p>
 		<form method="GET">
-			<label><input type="text" id="uris" /></label>
-			<button type="submit" id="explain">Explain</button>
+			<label><input type="text" id="uris" disabled="disabled"/></label>
+			<button type="submit" id="explain" disabled="disabled">Explain</button>
 		</form>
 
 		<p></p>
