--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -57,8 +57,8 @@
 	<div id="navigation">
 		<p class="navheading"><strong>Search Query</strong></p>
 		<form method="GET">
-			<label><input type="text" name="q" /></label>
-			<button type="submit">Search</button>
+			<label><input id="searchfield" type="text" name="q" disabled="disabled"/></label>
+			<button id="searchbutton" type="submit" disabled="disabled">Search</button>
 		</form>
 
 		<p class="navheading"><strong>Active Filters</strong></p>
