--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<section class="4u 6u$(large) 12u$(small)"><i class="icon fa-copy"></i>
 					<h3>Read online</h3>
 					<p>Prefer an HTML experience?  See the headings below for quick links to getting started.</p>
-					<p><a href="#">Start at the beginning...</a></p>
+					<p><a href="/panl/book/">Start at the beginning...</a></p>
 				</section>
 				<section class="4u 6u$(large) 12u$(small)"><i class="icon fa-pencil"></i>
 					<h3>Peruse the collection</h3>
