Added in documentation links and navigation sidebar

--- a/index.html
+++ b/index.html
@@ -38,19 +38,20 @@
 					<h3>Why?</h3>
 
 					<p>Because <code>/Caran+d'Ache/true/Black/bDW/</code> looks nicer than
-					<p><pre>
-					q=*:*&facet.mincount=1&rows=10&facet.field=lead_size_indicator&
-					facet.field=grip_material&facet.field=colours&facet.field=nib_shape&
-					facet.field=diameter&facet.field=cap_shape&facet.field=brand&
-					facet.field=mechanism_type&facet.field=length&facet.field=hardness_indicator
-					&facet.field=grip_type&facet.field=cap_material&facet.field=lead_grade_indicator
-					&facet.field=tubing_material&facet.field=in_built_sharpener&
-					facet.field=disassemble&facet.field=category&facet.field=body_shape&
-					facet.field=clip_material&facet.field=mechanism_material&facet.field=lead_length
-					&facet.field=body_material&facet.field=in_built_eraser&facet.field=grip_shape
-					&facet.field=relative_weight&facet.field=name&facet.field=nib_material
-					&facet.field=weight&facet.field=variants&facet=true&fq=brand:"Caran+d'Ache"
-					&fq=disassemble:"true"&fq=colours:"Black"&q.op=AND</pre></p>
+					<p>
+					<code>q=*:*&facet.mincount=1&rows=10&facet.field=lead_size_indicator&</code><br />
+					<code>facet.field=grip_material&facet.field=colours&facet.field=nib_shape&</code><br />
+					<code>facet.field=diameter&facet.field=cap_shape&facet.field=brand&</code><br />
+					<code>facet.field=mechanism_type&facet.field=length&facet.field=hardness_indicator</code><br />
+					<code>&facet.field=grip_type&facet.field=cap_material&facet.field=lead_grade_indicator</code><br />
+					<code>&facet.field=tubing_material&facet.field=in_built_sharpener&</code><br />
+					<code>facet.field=disassemble&facet.field=category&facet.field=body_shape&</code><br />
+					<code>facet.field=clip_material&facet.field=mechanism_material&facet.field=lead_length</code><br />
+					<code>&facet.field=body_material&facet.field=in_built_eraser&facet.field=grip_shape</code><br />
+					<code>&facet.field=relative_weight&facet.field=name&facet.field=nib_material</code><br />
+					<code>&facet.field=weight&facet.field=variants&facet=true&fq=brand:"Caran+d'Ache"</code><br />
+					<code>&fq=disassemble:"true"&fq=colours:"Black"&q.op=AND</code>
+				</p>
 
 					<h3>Additional Panl Niceties</h3>
 					<ol>
@@ -70,6 +71,7 @@
 
 					<ul class="actions">
 						<li><a href="https://github.com/synapticloop/panl/" class="button alt">Browse the code</a></li>
+						<li><a href="https://synapticloop.github.io/panl/" class="button alt">Read the book online</a></li>
 					</ul>
 				</div>
 				<div class="4u$ 12u$(medium) important(medium)"><span class="image fit rounded"><img
@@ -88,7 +90,7 @@
 		<div class="icon-grid">
 			<div class="row uniform 150%">
 				<section class="4u 6u(large) 12u$(small)"><i class="icon fa-book"></i>
-					<h3>Read the book</h3>
+					<h3>Read Offline</h3>
 					<p>Prefer a PDF all on one to print or take with you?</p>
 					<p><a href="#">Download the book...</a></p>
 				</section>
