--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><title>h2zero by synapticloop</title>
+<head><title>Panl: Getting Started with Panl by synapticloop</title>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<!--[if lte IE 8]>
@@ -10,19 +10,92 @@
 	<link rel="stylesheet" href="/assets/css/ie8.css"/><![endif]-->
 	<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 	##STYLE##
+
+	<style>
+		#header h1, #sidebar a, #sidebar h3, #sidebar p, #banner h2, #banner p {
+			  text-decoration: none;
+	  font-family: "Raleway", Helvetica, sans-serif;
+		font-feature-settings: normal;
+		font-kerning: auto;
+		font-language-override: normal;
+		font-optical-sizing: auto;
+		font-size-adjust: none;
+		font-stretch: 100%;
+		font-style: normal;
+		font-variant-alternates: normal;
+		font-variant-caps: normal;
+		font-variant-east-asian: normal;
+		font-variant-ligatures: normal;
+		font-variant-numeric: normal;
+		font-variant-position: normal;
+		font-variation-settings: normal;
+	}
+	#header h1 {
+		border-width: 0px;
+		font-size: 14.6667px;
+	}
+
+	#sidebar a {
+font-size: 11.7333px;
+font-weight: 700;
+text-align: left;
+		}
+		#sidebar h3 {
+font-size: 19.8px;
+font-weight: 700;
+text-align: left;
+		}
+		#sidebar p {
+font-size: 14.6667px;
+font-weight: 400;
+		}
+
+		#banner h2 {
+font-size: 36.6667px;
+font-weight: 700;
+text-align: center;
+text-shadow: 1px 1px 0 #444, -1px 1px 0 #444, -1px -1px 0 #444, 1px -1px 0 #444;
+		}
+		#banner p {
+font-size: 18.3333px;
+font-weight: 400;
+text-align: center;
+text-shadow: 1px 1px 0 #444, -1px 1px 0 #444, -1px -1px 0 #444, 1px -1px 0 #444;
+		}
+		#sidebar section a, #sidebar section h1 {
+			text-align: left;
+		}
+		#sidebar hr {
+			margin: 12px;
+		}
+		section.current-page {
+	background-color: #efefef;
+  padding: 7px 12px 12px 12px;
+  border-left: 4px solid black !important;
+  border: 1px solid #aaa;
+  margin: 12px 0;
+}
+	</style>
 </head>
 <body>
-<div id="header"><h1 id="logo"><a href="http://synapticloop.github.io/">Synapticloop</a> :: <a href="/panl/index.html">Panl</a></h1>
+<div id="header"><h1 id="logo"><a href="http://synapticloop.github.io/">Synapticloop</a> :: <a href="/panl/">Panl</a></h1>
 	<nav id="nav">
 	</nav>
 </div>
-<section id="banner"><h2>Welcome to Panl</h2>
+<section id="banner"><h2>Welcome to the Panl Book</h2>
 	<p>A rather pleasing companion to the Apache® Solr® Faceted Search Engine.</p></section>
 <section id="main">
 	<div class="container">
 		<div class="row 200%">
 			<div class="4u 12u$(medium)">
 				<section id="sidebar">
+					<h3>A Note On Page Generation</h3>
+					<p>
+						This page was converted from an exported HTML page including styling,
+						which has interfered with the overall page style, and <strong>page numbering
+						will not be correct, and you will miss out on my delightful footnotes.</strong>
+					</p>
+					<hr/>
 					<section>
 						##NAVIGATION##
 					</section>
