--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<p>Panl - This time it is Mechanical Pencils</p>
 	<nav id="nav">
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="/panl/">Home</a></li>
 		</ul>
 	</nav>
 </div>
@@ -71,7 +71,7 @@
 
 					<ul class="actions">
 						<li><a href="https://github.com/synapticloop/panl/" class="button alt">Browse the code</a></li>
-						<li><a href="https://synapticloop.github.io/panl/" class="button alt">Read the book online</a></li>
+						<li><a href="https://synapticloop.github.io/panl/book/" class="button alt">Read the book online</a></li>
 					</ul>
 				</div>
 				<div class="4u$ 12u$(medium) important(medium)"><span class="image fit rounded"><img
