--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<!--[if lte IE 8]>
-	<script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="/assets/css/main.css"/>
+	<script src="/panl/assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="/panl/assets/css/main.css"/>
 	<!--[if lte IE 8]>
-	<link rel="stylesheet" href="/assets/css/ie8.css"/><![endif]-->
+	<link rel="stylesheet" href="/panl/assets/css/ie8.css"/><![endif]-->
 	<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 	##STYLE##
 
@@ -108,6 +108,7 @@ text-shadow: 1px 1px 0 #444, -1px 1px 0 #444, -1px -1px 0 #444, 1px -1px 0 #444;
 						</footer>
 					</section>
 					<hr/>
+				</section>
 			</div>
 			<div class="8u$ 12u$(medium) important(medium)">
 				<section id="content">
@@ -127,14 +128,14 @@ text-shadow: 1px 1px 0 #444, -1px 1px 0 #444, -1px -1px 0 #444, 1px -1px 0 #444;
 		recommend.
 	</div>
 </div>
-<script src="/assets/js/jquery.min.js"></script>
-<script src="/assets/js/skel.min.js"></script>
-<script src="/assets/js/jquery.dropotron.min.js"></script>
-<script src="/assets/js/jquery.onvisible.min.js"></script>
-<script src="/assets/js/jquery.poptrox.min.js"></script>
-<script src="/assets/js/util.js"></script>
+<script src="/panl/assets/js/jquery.min.js"></script>
+<script src="/panl/assets/js/skel.min.js"></script>
+<script src="/panl/assets/js/jquery.dropotron.min.js"></script>
+<script src="/panl/assets/js/jquery.onvisible.min.js"></script>
+<script src="/panl/assets/js/jquery.poptrox.min.js"></script>
+<script src="/panl/assets/js/util.js"></script>
 <!--[if lte IE 8]>
-<script src="/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="/assets/js/main.js"></script>
+<script src="/panl/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="/panl/assets/js/main.js"></script>
 </body>
 </html>
